# crj-engine

./: .dockerignore  .env.example  .firebaserc  .gitignore  CLAUDE.md  Dockerfile  cloudbuild.yaml  firebase.json  pyproject.toml
.claude/: settings.json
.firebase/: hosting.d2Vi.cache
configs/: notify.json  swarasthanas.json  tuning.json
configs/ragas/: melakarta_72.json
configs/talas/: carnatic_35.json  dhrupad.json  hindustani.json  stroke_patterns.json
data/: Hamsadhwani.m4a  Manasa Sanchara Re.m4a  Pibare.m4a
data/lyrics/: sama_1_setu.json
docs/: ROADMAP.md  TECH_SPEC.md
mobile/: .gitignore  README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/: Podfile
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: app.dart  main.dart
mobile/lib/models/: raga.dart  (+4 more)
mobile/test/: widget_test.dart
scripts/: deploy.sh  generate_test_audio.py  notify.py  render_sample.py  test_vkg.py
scripts/hooks/: post-commit  post-tag
src/crj_engine/: __init__.py  notify.py
tests/: test_api.py  test_gamaka.py  test_integration.py  test_pitch_detector.py  test_raga_matcher.py  test_srt_sync.py  test_swara_mapper.py  test_synthesis.py  test_tala.py  test_tala_engine.py  test_tonic.py
web/: composer.html  index.html  player.html  tuning-check.html
web/apps/: privacy.html
web/audio/: Sama_1_Setu.m4a
web/css/: components.css  soundscape.css
web/js/: api-client.js  composition-tool.js  lyrics-sync.js  multilingual.js  notation-display.js  recorder.js  shruti-drone.js  tala-bar-display.js  ui.js
(+63 files in other folders)
